--- a/colleges/perencanaandandesainpembelajaran/index.html
+++ b/colleges/perencanaandandesainpembelajaran/index.html
@@ -17,8 +17,8 @@ Materi 1. Konsep desain instruksional
 <link rel=preload href=/home.png as=image>
 <script defer crossorigin=anonymous src=/assets/js/highlight.min.7680afc38aa6b15ddf158a4f3780b7b1f7dde7e91d26f073e6229bb7a0793c92.js integrity="sha256-doCvw4qmsV3fFYpPN4C3sffd5+kdJvBz5iKbt6B5PJI=" onload=hljs.initHighlightingOnLoad()></script>
 <link rel=icon href=https://ahm4ddm.xyz/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=https://ahm4ddm.xyz/favicon-16x16.png>
-<link rel=icon type=image/png sizes=32x32 href=https://ahm4ddm.xyz/favicon-32x32.png>
+<link rel=icon type=image/png sizes=16x16 href=https://ahm4ddm.xyz/favicon.ico>
+<link rel=icon type=image/png sizes=32x32 href=https://ahm4ddm.xyz/favicon.ico>
 <link rel=apple-touch-icon href=https://ahm4ddm.xyz/apple-touch-icon.png>
 <link rel=mask-icon href=https://ahm4ddm.xyz/safari-pinned-tab.svg>
 <meta name=theme-color content="#2e2e33">
