--- a/writeups/index.html
+++ b/writeups/index.html
@@ -1,166 +1,28 @@
-<!doctype html><html lang=en dir=auto>
-<head><meta charset=utf-8>
-<meta http-equiv=x-ua-compatible content="IE=edge">
-<meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no">
-<meta name=robots content="index, follow">
-<title>Writeups | ~/.ahm4ddm</title>
-<meta name=keywords content>
-<meta name=description content="Writeups - ~/.ahm4ddm">
-<meta name=author content>
-<link rel=canonical href=https://ahm4ddm.xyz/writeups/>
-<link crossorigin=anonymous href=/assets/css/stylesheet.min.6f60056d44d3f7eb69a4bc6c332b59960f3a995802bded244750232f33713c49.css integrity="sha256-b2AFbUTT9+tppLxsMytZlg86mVgCve0kR1AjLzNxPEk=" rel="preload stylesheet" as=style>
-<link rel=preload href=/home.png as=image>
-<link rel=icon href=https://ahm4ddm.xyz/favicon.ico>
-<link rel=icon type=image/png sizes=16x16 href=https://ahm4ddm.xyz/favicon.ico>
-<link rel=icon type=image/png sizes=32x32 href=https://ahm4ddm.xyz/favicon.ico>
-<link rel=apple-touch-icon href=https://ahm4ddm.xyz/apple-touch-icon.png>
-<link rel=mask-icon href=https://ahm4ddm.xyz/safari-pinned-tab.svg>
-<meta name=theme-color content="#2e2e33">
-<meta name=msapplication-TileColor content="#2e2e33">
-<meta name=generator content="Hugo 0.89.4">
-<link rel=alternate type=application/rss+xml href=https://ahm4ddm.xyz/writeups/index.xml>
-<noscript>
-<style>#theme-toggle,.top-link{display:none}</style>
-<style>@media(prefers-color-scheme:dark){:root{--theme:rgb(29, 30, 32);--entry:rgb(46, 46, 51);--primary:rgb(218, 218, 219);--secondary:rgb(155, 156, 157);--tertiary:rgb(65, 66, 68);--content:rgb(196, 196, 197);--hljs-bg:rgb(46, 46, 51);--code-bg:rgb(55, 56, 62);--border:rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style>
-</noscript><meta property="og:title" content="Writeups">
-<meta property="og:description" content>
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://ahm4ddm.xyz/writeups/">
-<meta name=twitter:card content="summary">
-<meta name=twitter:title content="Writeups">
-<meta name=twitter:description content>
-<script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Writeups","item":"https://ahm4ddm.xyz/writeups/"}]}</script>
-</head>
-<body class=list id=top>
-<script>localStorage.getItem("pref-theme")==="dark"?document.body.classList.add('dark'):localStorage.getItem("pref-theme")==="light"?document.body.classList.remove('dark'):window.matchMedia('(prefers-color-scheme: dark)').matches&&document.body.classList.add('dark')</script>
-<header class=header>
-<nav class=nav>
-<div class=logo>
-<a href=https://ahm4ddm.xyz/ accesskey=h title="~/.ahm4ddm (Alt + H)">
-<img src=/home.png alt=logo aria-label=logo height=" 30px">~/.ahm4ddm</a>
-<span class=logo-switches>
-<button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
-</button>
-</span>
-</div>
-<ul id=menu>
-<li>
-<a href=https://ahm4ddm.xyz/posts/ title=posts>
-<span>posts</span>
-</a>
-</li>
-<li>
-<a href=https://ahm4ddm.xyz/writeups/ title=writeups>
-<span class=active>writeups</span>
-</a>
-</li>
-<li>
-<a href=https://ahm4ddm.xyz/colleges/ title=colleges>
-<span>colleges</span>
-</a>
-</li>
-<li>
-<a href=https://ahm4ddm.xyz/projects/ title=projects>
-<span>projects</span>
-</a>
-</li>
-</ul>
-</nav>
-</header>
-<main class=main>
-<header class=page-header><div class=breadcrumbs><a href=https://ahm4ddm.xyz/>Home</a></div>
-<h1>Writeups</h1>
-</header>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Writeup ROP Emporium write4 [pwn]
-</h2>
-</header>
-<section class=entry-content>
-<p>Daftar Isi Download write432 klik write4 klik write432 Kita cek terlebih filenya.
+<!doctype html><html lang=en dir=auto><head><meta charset=utf-8><meta http-equiv=x-ua-compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name=robots content="index, follow"><title>Writeups | ~/.ahm4ddm</title><meta name=keywords content><meta name=description content="Writeups - ~/.ahm4ddm"><meta name=author content><link rel=canonical href=https://ahm4ddm.xyz/writeups/><link crossorigin=anonymous href=/assets/css/stylesheet.min.61dfb3f0b4cda95d2ccb867f9a3b244ce5d23e12492bcc3c277df594c7bc1adf.css integrity="sha256-Yd+z8LTNqV0sy4Z/mjskTOXSPhJJK8w8J331lMe8Gt8=" rel="preload stylesheet" as=style><link rel=preload href=/home.png as=image><link rel=icon href=https://ahm4ddm.xyz/favicon.ico><link rel=icon type=image/png sizes=16x16 href=https://ahm4ddm.xyz/favicon.ico><link rel=icon type=image/png sizes=32x32 href=https://ahm4ddm.xyz/favicon.ico><link rel=apple-touch-icon href=https://ahm4ddm.xyz/apple-touch-icon.png><link rel=mask-icon href=https://ahm4ddm.xyz/safari-pinned-tab.svg><meta name=theme-color content="#2e2e33"><meta name=msapplication-TileColor content="#2e2e33"><meta name=generator content="Hugo 0.80.0"><link rel=alternate type=application/rss+xml href=https://ahm4ddm.xyz/writeups/index.xml><noscript><style>#theme-toggle,.top-link{display:none}</style><style>@media(prefers-color-scheme:dark){:root{--theme: rgb(29, 30, 32);--entry: rgb(46, 46, 51);--primary: rgb(218, 218, 219);--secondary: rgb(155, 156, 157);--tertiary: rgb(65, 66, 68);--content: rgb(196, 196, 197);--hljs-bg: rgb(46, 46, 51);--code-bg: rgb(55, 56, 62);--border: rgb(51, 51, 51)}.list{background:var(--theme)}.list:not(.dark)::-webkit-scrollbar-track{background:0 0}.list:not(.dark)::-webkit-scrollbar-thumb{border-color:var(--theme)}}</style></noscript><meta property="og:title" content="Writeups"><meta property="og:description" content><meta property="og:type" content="website"><meta property="og:url" content="https://ahm4ddm.xyz/writeups/"><meta name=twitter:card content="summary"><meta name=twitter:title content="Writeups"><meta name=twitter:description content><script type=application/ld+json>{"@context":"https://schema.org","@type":"BreadcrumbList","itemListElement":[{"@type":"ListItem","position":1,"name":"Writeups","item":"https://ahm4ddm.xyz/writeups/"}]}</script></head><body class=list id=top><script>if(localStorage.getItem("pref-theme")==="dark"){document.body.classList.add('dark');}else if(localStorage.getItem("pref-theme")==="light"){document.body.classList.remove('dark')}else if(window.matchMedia('(prefers-color-scheme: dark)').matches){document.body.classList.add('dark');}</script><header class=header><nav class=nav><div class=logo><a href=https://ahm4ddm.xyz/ accesskey=h title="~/.ahm4ddm (Alt + H)"><img src=/home.png alt=logo aria-label=logo height=30px>~/.ahm4ddm</a>
+<span class=logo-switches><button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg></button></span></div><ul id=menu><li><a href=https://ahm4ddm.xyz/posts/ title=posts><span>posts</span></a></li><li><a href=https://ahm4ddm.xyz/writeups/ title=writeups><span class=active>writeups</span></a></li><li><a href=https://ahm4ddm.xyz/colleges/ title=colleges><span>colleges</span></a></li><li><a href=https://ahm4ddm.xyz/projects/ title=projects><span>projects</span></a></li></ul></nav></header><main class=main><header class=page-header><h1>Writeups</h1></header><article class=post-entry><header class=entry-header><h2>ROP Emporium</h2></header><section class=entry-content><p>Daftar Isi ret2win
+split
+callme
+write4
+ret2win File Download ret2win32 klik ret2win64 klik ret2win32 kita cek terlebih dahulu filenya.
 Didapatkan file ELF, dan dynamically linked
-$file write432 write432: ELF 32-bit LSB executable, Intel 80386, version 1 (SYSV), dynamically linked, interpreter /lib/ld-linux.so.2, for GNU/Linux 3.2.0, BuildID[sha1]=7142f5deace762a46e5cc43b6ca7e8818c9abe69, not stripped Lalu kita cek proteksi pada file.
-didapatkan NX aktif yang mana kita tidak bisa membuat shellcode.
-kita bisa bypass NX dengan metode return oriented programming (rop)....</p>
-</section>
-<footer class=entry-footer><span title="2021-02-19 23:09:03 +0700 WIB">February 19, 2021</span>&nbsp;·&nbsp;6 min</footer>
-<a class=entry-link aria-label="post link to Writeup ROP Emporium write4 [pwn]" href=https://ahm4ddm.xyz/writeups/rop-emporium/writeup-rope-write4/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Writeup ROP Emporium Callme [pwn]
-</h2>
-</header>
-<section class=entry-content>
-<p>Daftar Isi Download callme32 klik callme64 klik callme32 kita cek terlebih dahulu filenya.
-Didapatkan file ELF, dan dynamically linked
-$file callme callme: ELF 64-bit LSB executable, x86-64, version 1 (SYSV), dynamically linked, interpreter /lib64/ld-linux-x86-64.so.2, for GNU/Linux 3.2.0, BuildID[sha1]=e8e49880bdcaeb9012c6de5f8002c72d8827ea4c, not stripped lalu kita cek proteksi pada file.
-didapatkan NX aktif yang mana kita tidak bisa membuat shellcode.
-kita bisa bypass NX dengan metode return oriented programming (rop)....</p>
-</section>
-<footer class=entry-footer><span title="2021-02-13 14:34:14 +0700 WIB">February 13, 2021</span>&nbsp;·&nbsp;5 min</footer>
-<a class=entry-link aria-label="post link to Writeup ROP Emporium Callme [pwn]" href=https://ahm4ddm.xyz/writeups/rop-emporium/writeups-rope-callme/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Writeup ROP Emporium Split [pwn]
-</h2>
-</header>
-<section class=entry-content>
-<p>Daftar Isi Download ret2split32 klik ret2split64 klik ret2split32 Kita cek terlebih dahulu informasi file
-didapatkan file ELF dan dynamically linked.
-$file split32 split32: ELF 32-bit LSB executable, Intel 80386, version 1 (SYSV), dynamically linked, interpreter /lib/ld-linux.so.2, for GNU/Linux 3.2.0, BuildID[sha1]=76cb700a2ac0484fb4fa83171a17689b37b9ee8d, not stripped lalu kita cek proteksi pada file. didapatkan NX aktif yang mana kita tidak bisa membuat shellcode....</p>
-</section>
-<footer class=entry-footer><span title="2021-02-11 23:48:14 +0700 WIB">February 11, 2021</span>&nbsp;·&nbsp;4 min</footer>
-<a class=entry-link aria-label="post link to Writeup ROP Emporium Split [pwn]" href=https://ahm4ddm.xyz/writeups/rop-emporium/writeup-rope-split/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Writeup ROP Emporium Ret2win [pwn]
-</h2>
-</header>
-<section class=entry-content>
-<p>Daftar Isi Download ret2win32 klik ret2win64 klik ret2win32 kita cek terlebih dahulu filenya.
-Didapatkan file ELF, dan dynamically linked
-$file ret2win32 ret2win32: ELF 32-bit LSB executable, Intel 80386, version 1 (SYSV), dynamically linked, interpreter /lib/ld-linux.so.2, for GNU/Linux 3.2.0, BuildID[sha1]=e1596c11f85b3ed0881193fe40783e1da685b851, not stripped lalu kita cek proteksi pada file. didapatkan NX aktif yang mana kita tidak bisa membuat shellcode.
-kita bisa bypass NX dengan metode return oriented programming (rop)...</p>
-</section>
-<footer class=entry-footer><span title="2021-02-10 22:29:10 +0700 WIB">February 10, 2021</span>&nbsp;·&nbsp;4 min</footer>
-<a class=entry-link aria-label="post link to Writeup ROP Emporium Ret2win [pwn]" href=https://ahm4ddm.xyz/writeups/rop-emporium/writeup-rope-ret2win/></a>
-</article>
-<article class=post-entry>
-<header class=entry-header>
-<h2>Writeup Asis Mrs. Hudson [pwn]
-</h2>
-</header>
-<section class=entry-content>
-<p>klik disini untuk download file.
+$file ret2win32 ret2win32: ELF 32-bit LSB executable, Intel 80386, version 1 (SYSV), dynamically linked, interpreter /lib/ld-linux.so.2, for GNU/Linux 3.2.0, BuildID[sha1]=e1596c11f85b3ed0881193fe40783e1da685b851, not stripped lalu kita cek proteksi pada file. didapatkan NX aktif yang mana kita tidak bisa membuat shellcode....</p></section><footer class=entry-footer><span title="2021-02-10 22:29:10 +0700 WIB">February 10, 2021</span></footer><a class=entry-link aria-label="post link to ROP Emporium" href=https://ahm4ddm.xyz/writeups/writeup-ropemporium/></a></article><article class=post-entry><header class=entry-header><h2>Writeup Asis Mrs. Hudson [pwn]</h2></header><section class=entry-content><p>klik disini untuk download file.
 Kita cek identitas dari file.
 $file mrs._hudson mrs._hudson: ELF 64-bit LSB executable, x86-64, version 1 (SYSV), dynamically linked, interpreter /lib64/ld-linux-x86-64.so.2, for GNU/Linux 2.6.32, BuildID[sha1]=a99b54f5a0f90ebade826e34188ac1f5eebb2cc7, not stripped Didapatkan file ELF, 64bit, not stripped, dynamically linked.
 Selanjutnya kita cek proteksi pada file tersebut.
-$checksec mrs._hudson Arch: amd64-64-little RELRO: Partial RELRO Stack: No canary found NX: NX disabled PIE: No PIE (0x400000) RWX: Has RWX segments Kita lihat di GDB didapatkan:...</p>
-</section>
-<footer class=entry-footer><span title="2021-02-07 00:38:53 +0700 WIB">February 7, 2021</span>&nbsp;·&nbsp;4 min</footer>
-<a class=entry-link aria-label="post link to Writeup Asis Mrs. Hudson [pwn]" href=https://ahm4ddm.xyz/writeups/writeup-asis-mrs.hudson/></a>
-</article>
-<footer class=page-footer>
-<nav class=pagination>
-<a class=next href=https://ahm4ddm.xyz/writeups/page/2/>Next Page »</a>
-</nav>
-</footer>
-</main>
-<footer class=footer>
-<span>&copy; 2021 <a href=https://ahm4ddm.xyz/>~/.ahm4ddm</a></span>
-<span>
-Powered by
+$checksec mrs._hudson Arch: amd64-64-little RELRO: Partial RELRO Stack: No canary found NX: NX disabled PIE: No PIE (0x400000) RWX: Has RWX segments Kita lihat di GDB didapatkan:...</p></section><footer class=entry-footer><span title="2021-02-07 00:38:53 +0700 WIB">February 7, 2021</span></footer><a class=entry-link aria-label="post link to Writeup Asis Mrs. Hudson [pwn]" href=https://ahm4ddm.xyz/writeups/writeup-asis-mrs.hudson/></a></article><article class=post-entry><header class=entry-header><h2>OverTheWire: Bandit</h2></header><section class=entry-content><p>Daftar isi Bandit Level 0
+Bandit Level 0 → Level 1
+Bandit Level 1 → Level 2
+Bandit Level 2 → Level 3
+Bandit Level 3 → Level 4
+Bandit Level 4 → Level 5
+Bandit Level 5 → Level 6
+Bandit Level 6 → Level 7
+Bandit Level 7 → Level 8
+Bandit Level 8 → Level 9
+Bandit Level 9 → Level 10...</p></section><footer class=entry-footer><span title="2021-01-07 22:09:39 +0700 WIB">January 7, 2021</span></footer><a class=entry-link aria-label="post link to OverTheWire: Bandit" href=https://ahm4ddm.xyz/writeups/writeup-overthewire-bandit-indonesia/></a></article></main><footer class=footer><span>&copy; 2021 <a href=https://ahm4ddm.xyz/>~/.ahm4ddm</a></span>
+<span>Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
-        <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a>
-</span>
-</footer>
-<a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg>
-</a>
-<script>let menu=document.getElementById('menu');menu&&(menu.scrollLeft=localStorage.getItem("menu-scroll-position"),menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft)}),document.querySelectorAll('a[href^="#"]').forEach(a=>{a.addEventListener("click",function(b){b.preventDefault();var a=this.getAttribute("href").substr(1);window.matchMedia('(prefers-reduced-motion: reduce)').matches?document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView():document.querySelector(`[id='${decodeURIComponent(a)}']`).scrollIntoView({behavior:"smooth"}),a==="top"?history.replaceState(null,null," "):history.pushState(null,null,`#${a}`)})})</script>
-<script>var mybutton=document.getElementById("top-link");window.onscroll=function(){document.body.scrollTop>800||document.documentElement.scrollTop>800?(mybutton.style.visibility="visible",mybutton.style.opacity="1"):(mybutton.style.visibility="hidden",mybutton.style.opacity="0")}</script>
-<script>document.getElementById("theme-toggle").addEventListener("click",()=>{document.body.className.includes("dark")?(document.body.classList.remove('dark'),localStorage.setItem("pref-theme",'light')):(document.body.classList.add('dark'),localStorage.setItem("pref-theme",'dark'))})</script>
-</body>
-</html>
+        <a href=https://git.io/hugopapermod rel=noopener target=_blank>PaperMod</a></span></footer><a href=#top aria-label="go to top" title="Go to Top (Alt + G)" class=top-link id=top-link accesskey=g><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 12 6" fill="currentcolor"><path d="M12 6H0l6-6z"/></svg></a><script>let menu=document.getElementById('menu')
+if(menu){menu.scrollLeft=localStorage.getItem("menu-scroll-position");menu.onscroll=function(){localStorage.setItem("menu-scroll-position",menu.scrollLeft);}}
+document.querySelectorAll('a[href^="#"]').forEach(anchor=>{anchor.addEventListener("click",function(e){e.preventDefault();var id=this.getAttribute("href").substr(1);if(!window.matchMedia('(prefers-reduced-motion: reduce)').matches){document.querySelector(`[id='${decodeURIComponent(id)}']`).scrollIntoView({behavior:"smooth"});}else{document.querySelector(`[id='${decodeURIComponent(id)}']`).scrollIntoView();}
+if(id==="top"){history.replaceState(null,null," ");}else{history.pushState(null,null,`#${id}`);}});});</script><script>var mybutton=document.getElementById("top-link");window.onscroll=function(){if(document.body.scrollTop>800||document.documentElement.scrollTop>800){mybutton.style.visibility="visible";mybutton.style.opacity="1";}else{mybutton.style.visibility="hidden";mybutton.style.opacity="0";}};</script><script>document.getElementById("theme-toggle").addEventListener("click",()=>{if(document.body.className.includes("dark")){document.body.classList.remove('dark');localStorage.setItem("pref-theme",'light');}else{document.body.classList.add('dark');localStorage.setItem("pref-theme",'dark');}})</script></body></html>
